2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementIComparableCorreclyRule.cs: New. Rule to check that 
	IComparable, and it's generic version: IComparable<T>, are 
	implemented correctly, i.e. override Equals and provide the ==, 
	!=, < and > operators.
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidPublicInstanceFieldsRule.cs: Ignore code generated by CSC 
	for anonymous types (i.e. inner type that defines public fields).

2008-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add reference to Test.Rules to the unit test assembly.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypesWithDisposableFieldsShouldBeDisposableRule.cs: Don't check
	code generated by compilers or tools since the developer cannot do
	(much) on them.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidEmptyInterfaceRule.cs: Oops, wrong/duplicate rule.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsRule.cs
	* AttributeArgumentsShouldHaveAccessorsRule.cs
	* AvoidEmptyInterfaceRule.cs
	* AvoidPropertiesWithoutGetAccessorRule.cs
	* AvoidPublicInstanceFieldsRule.cs
	* ConsiderConvertingMethodToPropertyRule.cs
	* DefineAZeroValueRule.cs
	* DisposableFieldsShouldBeDisposedRule.cs
	* DisposableTypesShouldHaveFinalizerRule.cs
	* DontDeclareProtectedFieldsInSealedClassRule.cs
	* EnsureSymmetryForOverloadedOperatorsRule.cs
	* EnumsShouldDefineAZeroValueRule.cs
	* EnumsShouldUseInt32Rule.cs
	* FinalizersShouldBeProtectedRule.cs
	* FinalizersShouldCallBaseClassFinalizerRule.cs
	* FlagsShouldNotDefineAZeroValueRule.cs
	* ImplementEqualsAndGetHashCodeInPairRule.cs
	* MainShouldNotBePublicRule.cs
	* MissingAttributeUsageOnCustomAttributeRule.cs
	* OperatorEqualsShouldBeOverloadedRule.cs
	* OverrideEqualsMethodRule.cs
	* ProvideAlternativeNamesForOperatorOverloadsRule.cs